# kursayinCalculatorQT

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Core/Calculator/: Calculator.cpp  Calculator.h
Core/Headers/: HashPassword.h  HistoryDelegate.h  HistoryItem.h  HistoryModel.h  Number.h  UserService.h
Core/Number/: Number.cpp  Number.h
Core/Src/: Calculator.cpp  HashPassword.cpp  HistoryModel.cpp  Number.cpp  UserService.cpp
Data/: DbManager.cpp  DbManager.h  users.db
Entities/: User.h
Widgets/Authentication/: AuthenticationWidget.cpp  AuthenticationWidget.h
Widgets/MainWindow/: MainWindow.cpp  MainWindow.h
